# ml-mini-etl-eda

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
